fix(federation): fix category management for federated API (#7902)
**Issue** [APIM-5403](https://gravitee.atlassian.net/browse/APIM-5403)

## Description

[PR 7864](https://github.com/gravitee-io/gravitee-api-management/pull/7864)
we have a bug with storage of categories by key instead of ids.

(cherry picked from commit 3132f0951d8490d196c80fd8056bdbcd8a8206b8)

# Conflicts:
#	gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/main/java/io/gravitee/apim/core/api/domain_service/CategoryDomainService.java
#	gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/main/java/io/gravitee/apim/core/api/domain_service/ValidateFederatedApiDomainService.java
#	gravitee-apim-rest-api/gravitee-apim-rest-api-service/src/main/java/io/gravitee/apim/infra/domain_service/api/CategoryDomainServiceImpl.java